--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin:'application'
 
 sourceCompatibility = 1.7
 version = '1.0'
@@ -7,12 +8,19 @@ repositories {
     mavenCentral()
 }
 
+mainClassName = "filesorter.console.Main"
+
 dependencies {
     compile     'org.psjava:psjava:0.1.15',
-                'commons-lang:commons-lang:2.4'
+                'commons-lang:commons-lang:2.4',
+                'commons-io:commons-io:2.4'
     compile     fileTree(dir: 'lib', include: ['*.jar'])
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile 'commons-io:commons-io:2.4',
-                'commons-lang:commons-lang:2.4'
+}
+
+run {
+    if (project.hasProperty('args')) {
+        args project.args.split('\\s')
+    }
 }
